--- a/app/client.html
+++ b/app/client.html
@@ -31,6 +31,7 @@
       <button id="btnLogout" style="margin: 0; padding: 0.4rem 0.8rem; background: #dc3545;">Logout</button>
     </div>
     <div id="messages"></div>
+    <div id="actionsChips"></div>
     <div class="message-input-container">
       <input id="msgInput" type="text" placeholder="Type a message" />
       <button id="sendBtn">Send</button>
