Improve reloading, add test skin

--- a/app/client.html
+++ b/app/client.html
@@ -8,6 +8,8 @@
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 </head>
 <body>
+  <div id="connectionIndicator" class="connection-indicator connecting" title="Click for connection info"></div>
+  
   <div id="loginBox">
     <h3>Login</h3>
     <div class="input-group">
