Add basic themes and imagined object manipulation

--- a/app/client.html
+++ b/app/client.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>tinyrooms Client</title>
-  <link rel="stylesheet" href="/app/base.css">
+  <link rel="stylesheet" href="/app/base-retro90.css">
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 </head>
 <body>
