Major client updates

--- a/app/client.html
+++ b/app/client.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>tinyrooms Client</title>
-  <link rel="stylesheet" href="/app/base-retro90.css">
+  <link rel="stylesheet" href="/app/client.css">
+  <link rel="stylesheet" href="/app/base.css">
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 </head>
 <body>
@@ -32,6 +33,7 @@
       <h3 style="margin: 0;">Chat</h3>
       <button id="btnLogout" style="margin: 0; padding: 0.4rem 0.8rem; background: #dc3545;">Logout</button>
     </div>
+    <div id="statusDisplay"></div>
     <div id="messages"></div>
     <div id="actionsChips"></div>
     <div class="message-input-container">
