--- a/app/client.html
+++ b/app/client.html
@@ -5,12 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>tinyrooms Client</title>
   <link rel="stylesheet" href="/app/client.css">
-  <link rel="stylesheet" href="/app/base.css">
+  <link id="skin-style" rel="stylesheet" href="/app/base.css">
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 </head>
 <body>
-  <div id="connectionIndicator" class="connection-indicator connecting" title="Click for connection info"></div>
-  
   <div id="loginBox">
     <h3>Login</h3>
     <div class="input-group">
@@ -29,10 +27,6 @@
   </div>
 
   <div id="chatBox" style="display:none; margin-top:1rem;">
-    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 0.5rem;">
-      <h3 style="margin: 0;">Chat</h3>
-      <button id="btnLogout" style="margin: 0; padding: 0.4rem 0.8rem; background: #dc3545;">Logout</button>
-    </div>
     <div id="statusDisplay"></div>
     <div id="messages"></div>
     <div id="actionsChips"></div>
@@ -44,7 +38,15 @@
       <h4>Actions</h4>
       <div id="actionButtons"></div>
     </div>
+    <div style="display: flex; justify-content: flex-start; margin-bottom: 0.5rem; gap: 0.5rem;"></div>
+      <div id="connectionIndicator" class="connection-indicator connecting" title="Click for connection info"></div>
+      <button id="btnLogout" style="margin: 0; padding: 0.4rem 0.8rem; background: #dc3545;">Exit</button>
+    </div>
   </div>
 
 <script src="/app/client.js"></script>
+<script src="/app/text.js"></script>
+<script src="/app/state.js"></script>
+<script src="/app/login.js"></script>
+<script src="/app/ui.js"></script>
 </html>
