Improve action chip rendering, add basic sounds

--- a/app/client.html
+++ b/app/client.html
@@ -45,6 +45,7 @@
   </div>
 
 <script src="/app/client.js"></script>
+<script src="/app/sound.js"></script>
 <script src="/app/text.js"></script>
 <script src="/app/state.js"></script>
 <script src="/app/login.js"></script>
