FIx client layout

--- a/app/client.html
+++ b/app/client.html
@@ -29,13 +29,12 @@
   <div id="chatBox" style="display:none; margin-top:1rem;">
     <div id="statusDisplay"></div>
     <div id="messages"></div>
-    <div id="actionsChips"></div>
     <div class="message-input-container">
+      <div id="actionsChips"></div>
       <input id="msgInput" type="text" placeholder="Type a message" />
-      <button id="sendBtn">Send</button>
+      <button id="sendBtn">➤</button>
     </div>
     <div id="actionsContainer">
-      <h4>Actions</h4>
       <div id="actionButtons"></div>
     </div>
     <div style="display: flex; justify-content: flex-start; margin-bottom: 0.5rem; gap: 0.5rem;"></div>
