--- a/app/client.html
+++ b/app/client.html
@@ -37,8 +37,9 @@
     <div id="actionsContainer">
       <div id="actionButtons"></div>
     </div>
-    <div style="display: flex; justify-content: flex-start; margin-bottom: 0.5rem; gap: 0.5rem;"></div>
+    <div style="display: flex; justify-content: flex-start; margin-bottom: 0.5rem; gap: 0.5rem;">
       <div id="connectionIndicator" class="connection-indicator connecting" title="Click for connection info"></div>
+      <button id="btnTalk" style="margin: 0; padding: 0.4rem 0.8rem; background: #6c757d;">🔇 Talk</button>
       <button id="btnLogout" style="margin: 0; padding: 0.4rem 0.8rem; background: #dc3545;">Exit</button>
     </div>
   </div>
