Add speech support

--- a/app/client.html
+++ b/app/client.html
@@ -50,4 +50,6 @@
 <script src="/app/state.js"></script>
 <script src="/app/login.js"></script>
 <script src="/app/ui.js"></script>
+<script src="/app/talk.js"></script>
+
 </html>
